# NovusCore-Client

./: CMakeLists.txt  LICENSE
client/: CMakeLists.txt  ClientHandler.cpp  ClientRenderer.cpp  ClientRenderer.h  ConsoleCommands.h  EngineLoop.cpp  EngineLoop.h  main.cpp  pch.h
client/ConsoleCommands/: PingCommand.h  QuitCommand.h  ScriptCommand.h
client/Data/: NovusUIPanel.png.py
client/Data/scripts/: LoginScreenWIP.as
client/ECS/Components/: GameEntityInfo.h  Localplayer.h  LocalplayerSingleton.h  Transform.h
client/ECS/Systems/: AreaUpdateSystem.cpp  AreaUpdateSystem.h  DayNightSystem.cpp  DayNightSystem.h  MovementSystem.cpp  MovementSystem.h
client/Editor/: Editor.cpp  Editor.h
client/Editor/NDBC/: NDBCEditorBase.h  NDBCEditorHandler.cpp  NDBCEditorHandler.h  TeleportLocationsEditor.cpp  TeleportLocationsEditor.h
client/Gameplay/DBC/: DBCLoader.cpp  DBCLoader.h
client/Gameplay/Map/: Cell.h  Chunk.cpp  Chunk.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  MapObject.h  MapObjectRoot.h
client/Gameplay/Texture/: TextureLoader.cpp  TextureLoader.h
client/Loaders/: LoaderSystem.cpp  LoaderSystem.h
client/Loaders/Config/: ConfigLoader.cpp  ConfigLoader.h
client/Loaders/DBC/: DBC.h  DBCLoader.cpp  DBCLoader.h
client/Loaders/DisplayInfo/: DisplayInfoLoader.cpp  DisplayInfoLoader.h
client/Loaders/Map/: MapLoader.cpp  MapLoader.h
client/Loaders/NDBC/: NDBC.h  NDBCLoader.cpp  NDBCLoader.h
client/Loaders/Texture/: TextureLoader.cpp  TextureLoader.h
client/Network/: MessageHandler.cpp  MessageHandler.h  NetworkClient.cpp  NetworkClient.h  NetworkPacket.h  Opcodes.h
client/Rendering/: CModelRenderer.cpp  CModelRenderer.h  Camera.cpp  Camera.h  CameraFreelook.cpp  CameraFreelook.h  CameraOrbital.cpp  CameraOrbital.h  ClientRenderer.cpp  ClientRenderer.h  CullUtils.cpp  CullUtils.h  DebugRenderer.cpp  DebugRenderer.h  FFX_ParallelSort.h  LightConstantBuffer.h  MapObjectRenderer.cpp  MapObjectRenderer.h  NM2Renderer.cpp  NM2Renderer.h  PixelQuery.cpp  PixelQuery.h  SkyboxRenderer.cpp  SkyboxRenderer.h  SortUtils.cpp  SortUtils.h  TerrainRenderer.cpp  TerrainRenderer.h  UIElementRegistry.cpp  UIElementRegistry.h  UIRenderer.cpp  UIRenderer.h  ViewConstantBuffer.h  WaterRenderer.cpp  WaterRenderer.h
client/Rendering/CModel/: CModel.h
client/Rendering/NM2/: NM2.h
client/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptHandler.cpp  ScriptHandler.h
client/Scripting/Classes/: Player.cpp  Player.h
client/UI/: ImageUtilsTransactions.h  TextUtils.cpp  TextUtils.h  TextUtilsTransactions.h  TransformEventUtilsTransactions.h  TransformUtils.h  UIInputHandler.cpp  UIInputHandler.h  UITransformUtils.h  UITypes.h
client/UI/Utils/: ColllisionUtils.cpp  ColllisionUtils.h  ElementUtils.cpp  ElementUtils.h  EventUtils.h  SliderUtils.h  SortUtils.cpp  SortUtils.h  TextUtils.cpp  TextUtils.h  TransformUtils.cpp  TransformUtils.h  VisibilityUtils.cpp  VisibilityUtils.h
client/UI/Widget/: Button.cpp  Button.h  InputField.cpp  InputField.h  Label.cpp  Label.h  Panel.cpp  Panel.h  Widget.cpp  Widget.h
client/UI/angelscript/: BaseElement.cpp  BaseElement.h  Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Inputfield.cpp  Inputfield.h  Label.cpp  Label.h  LockToken.h  Panel.cpp  Panel.h  RegistryUtils.cpp  RegistryUtils.h  Slider.cpp  Slider.h  SliderHandle.cpp  SliderHandle.h  UITypeRegister.cpp  UITypeRegister.h  UIUtils.cpp  UIUtils.h
client/Utils/: ConfigUtils.cpp  ConfigUtils.h  EntityUtils.cpp  EntityUtils.h  MapLoader.cpp  MapLoader.h  MapUtils.cpp  MapUtils.h  NetworkUtils.cpp  NetworkUtils.h  ServiceLocator.cpp  ServiceLocator.h
dep/imgui/: CMakeLists.txt
dep/imgui/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_widgets.cpp
render-lib/: CMakeLists.txt
render-lib/Renderer/: BackendDispatch.cpp  BackendDispatch.h  BufferBackend.h  CommandList.cpp  CommandList.h  ConstantBuffer.h  DescriptorSet.cpp  DescriptorSet.h  Font.cpp  Font.h  FrameResource.h  InstanceData.cpp  InstanceData.h  RenderGraph.cpp  RenderGraph.h  RenderGraphBuilder.cpp  RenderGraphBuilder.h  RenderGraphResources.cpp  RenderGraphResources.h  RenderLayer.cpp  RenderLayer.h  RenderPass.cpp  RenderPass.h  RenderPassResources.h  RenderStates.h  Renderer.cpp  Renderer.h  StorageBuffer.h  SwapChain.h
render-lib/Renderer/Commands/: AddSignalSemaphore.h  AddWaitSemaphore.h  BeginTrace.h  BindDescriptorSet.h  (+33 more)
render-lib/Window/: Window.cpp  Window.h
scenemanager-lib/: CMakeLists.txt  SceneCallback.h  SceneManager.cpp  SceneManager.h
(+252 files in other folders)
